# ML_Project

./: Makefile  README.md  pyproject.toml  requirements.txt
Src/: __init__.py  dataset.py  exception.py  features.py  loggers.py  plots.py  setup.py
Src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
Src/config/: __init__.py  config.py
Src/exception/: __init__.py  exception.py
Src/modeling/: predict.py
Src/pipeline/: train.py
Src/utils/: utils.py
notebooks/: EDA Student Performance.ipynb  MODEL_TRAINING.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
